--- a/index.html
+++ b/index.html
@@ -1,45 +1,32 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Privacy Policy - Oraclo</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <style>
-        body {
-            font-family: sans-serif;
-            max-width: 800px;
-            margin: auto;
-            padding: 2rem;
-            line-height: 1.6;
-            color: #333;
-        }
-        h1 {
-            color: #0073e6;
-        }
-    </style>
+  <meta charset="UTF-8">
+  <title>Oraclo - Smart Home</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      max-width: 800px;
+      margin: 0 auto;
+      padding: 2rem;
+      background-color: #f7f7f7;
+      color: #333;
+    }
+    h1 {
+      color: #0077cc;
+    }
+    a {
+      color: #0077cc;
+      text-decoration: none;
+    }
+    a:hover {
+      text-decoration: underline;
+    }
+  </style>
 </head>
 <body>
-    <h1>Privacy Policy</h1>
-    <p>Last updated: June 2, 2025</p>
-
-    <p>Oraclo ("we", "our", or "us") operates the Oraclo Connect app and related services (the "Service").</p>
-
-    <p>This page informs you of our policies regarding the collection, use, and disclosure of personal data when you use our Service and the choices you have associated with that data.</p>
-
-    <h2>Information Collection and Use</h2>
-    <p>We do not collect or share any personally identifiable information. Data stored is limited to device configuration and usage status required for service operation.</p>
-
-    <h2>Usage Data</h2>
-    <p>When you use the Service, we may collect data such as device status (e.g., on/off) and activity logs to provide better functionality. This data is not linked to any personal identity.</p>
-
-    <h2>Security</h2>
-    <p>The security of your data is important to us. We use commercially acceptable means to protect it, but remember that no method of transmission over the Internet or method of electronic storage is 100% secure.</p>
-
-    <h2>Changes to This Privacy Policy</h2>
-    <p>We may update our Privacy Policy from time to time. We will notify you of any changes by posting the new policy on this page.</p>
-
-    <h2>Contact Us</h2>
-    <p>If you have any questions about this Privacy Policy, you can contact us at: <a href="mailto:support@oraclo.com">support@oraclo.com</a></p>
+  <h1>Welcome to Oraclo</h1>
+  <p>Oraclo is a smart home solution to control your connected devices with ease. Control your heater, lights, and more — anytime, anywhere.</p>
+  <p><a href="privacy.html">Read our Privacy Policy</a></p>
 </body>
 </html>
