--- a/index.html
+++ b/index.html
@@ -1,45 +1,89 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Privacy Policy - Oraclo</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <style>
-        body {
-            font-family: sans-serif;
-            max-width: 800px;
-            margin: auto;
-            padding: 2rem;
-            line-height: 1.6;
-            color: #333;
-        }
-        h1 {
-            color: #0073e6;
-        }
-    </style>
+  <meta charset="UTF-8" />
+  <title>Oraclo - Art that speaks to you</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <style>
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
+
+    html, body {
+      height: 100%;
+      font-family: 'Arial', sans-serif;
+      overflow: hidden;
+    }
+
+    #bg-video {
+      position: fixed;
+      top: 0;
+      left: 0;
+      min-width: 100%;
+      min-height: 100%;
+      object-fit: cover;
+      z-index: -1;
+    }
+
+    .overlay {
+      position: relative;
+      height: 100%;
+      width: 100%;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      text-align: center;
+      background-color: rgba(255, 255, 255, 0.85);
+      padding: 2rem;
+    }
+
+    .logo {
+      max-width: 200px;
+      margin-bottom: 2rem;
+    }
+
+    h1 {
+      font-size: 2.5rem;
+      color: #333;
+      margin-bottom: 1rem;
+    }
+
+    p {
+      font-size: 1.1rem;
+      color: #555;
+      max-width: 600px;
+      margin-bottom: 2rem;
+    }
+
+    a {
+      color: #0077cc;
+      text-decoration: none;
+      font-weight: bold;
+    }
+
+    a:hover {
+      text-decoration: underline;
+    }
+  </style>
 </head>
 <body>
-    <h1>Privacy Policy</h1>
-    <p>Last updated: June 2, 2025</p>
 
-    <p>Oraclo ("we", "our", or "us") operates the Oraclo Connect app and related services (the "Service").</p>
+  <!-- Vídeo de fundo -->
+  <video id="bg-video" autoplay muted loop playsinline>
+    <source src="oraclo_intro.mp4" type="video/mp4">
+    Seu navegador não suporta vídeo HTML5.
+  </video>
 
-    <p>This page informs you of our policies regarding the collection, use, and disclosure of personal data when you use our Service and the choices you have associated with that data.</p>
+  <!-- Conteúdo sobreposto -->
+  <div class="overlay">
+    <img src="logo.png" alt="Oraclo Logo" class="logo" />
+    <h1>Welcome to Oraclo</h1>
+    <p>Art that speaks to you. Controle seus dispositivos inteligentes com estilo, intuição e poder.</p>
+    <p><a href="privacy.html">Read our Privacy Policy</a></p>
+  </div>
 
-    <h2>Information Collection and Use</h2>
-    <p>We do not collect or share any personally identifiable information. Data stored is limited to device configuration and usage status required for service operation.</p>
-
-    <h2>Usage Data</h2>
-    <p>When you use the Service, we may collect data such as device status (e.g., on/off) and activity logs to provide better functionality. This data is not linked to any personal identity.</p>
-
-    <h2>Security</h2>
-    <p>The security of your data is important to us. We use commercially acceptable means to protect it, but remember that no method of transmission over the Internet or method of electronic storage is 100% secure.</p>
-
-    <h2>Changes to This Privacy Policy</h2>
-    <p>We may update our Privacy Policy from time to time. We will notify you of any changes by posting the new policy on this page.</p>
-
-    <h2>Contact Us</h2>
-    <p>If you have any questions about this Privacy Policy, you can contact us at: <a href="mailto:support@oraclo.com">support@oraclo.com</a></p>
 </body>
 </html>
