--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
   <div class="overlay">
     <img src="logo.png" alt="Oraclo Logo" class="logo" />
     <h1>Welcome to Oraclo</h1>
-    <p>Art that speaks to you. Controle seus dispositivos inteligentes com estilo, intuição e poder.</p>
+    <p>Art that speaks to you. Controle seus dispositivos inteligentes com estilo. Coming soon!</p>
     <p><a href="privacy.html">Read our Privacy Policy</a></p>
   </div>
 
